Update to v1.1.5-beta - sync from private repo v1.0.47
- Fix PowerTool reconciliation logic for terminated containers
- Remove namespace creation from install manifests
- Fix collector deployment version management
- Resolve filename collision issue in collector
- Add new examples and helper scripts

--- a/deploy/collector/kustomization.yaml
+++ b/deploy/collector/kustomization.yaml
@@ -4,3 +4,9 @@ resources:
 
 # Optional: Add debug pod for development
 # - debug-pod.yaml
+
+images:
+- name: localhost:32000/codriverlabs/toe-collector
+  newTag: 1.0.20-beta
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
