--- a/cicd-scripts/config.env
+++ b/cicd-scripts/config.env
@@ -3,7 +3,7 @@
 
 # Project settings
 PROJECT_NAME="toe-k8s-operator"
-VERSION="${VERSION:-v1.0.47}"
+VERSION="${VERSION:-v1.1.5-beta}"
 NAMESPACE="${NAMESPACE:-toe-system}"
 
 # Registry settings (choose one)
