sync: update to v1.0.48 with EKS deployment storage class fix

--- a/cicd-scripts/config.env
+++ b/cicd-scripts/config.env
@@ -3,7 +3,7 @@
 
 # Project settings
 PROJECT_NAME="toe-k8s-operator"
-VERSION="${VERSION:-v1.1.6-beta}"
+VERSION="${VERSION:-v1.0.47}"
 NAMESPACE="${NAMESPACE:-toe-system}"
 
 # Registry settings (choose one)
